--- a/styles/main.css
+++ b/styles/main.css
@@ -37,7 +37,6 @@ ul {
 ul li {
     width: 100%;
     background: #F22613;
-    padding: 15px 0px;
 }
 
 ul li a {
@@ -46,6 +45,8 @@ ul li a {
     font-size: 20px;
     font-weight: bold;
     font-family: "Lato", sans-serif;
+    padding: 15px 0px;
+    display: block;
 }
 
 ul li:hover {
